[gd_scene load_steps=14 format=3 uid="uid://drt5q8x9nw3k"]

[ext_resource type="Script" path="res://characters/enemies/sewer_rat.gd" id="1_sewer_rat"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="2_state_machine"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_idle.gd" id="3_idle"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_patrol.gd" id="4_patrol"]
[ext_resource type="Script" path="res://characters/enemies/states/rat_swarm_chase.gd" id="5_swarm_chase"]
[ext_resource type="Script" path="res://characters/enemies/states/rat_poison_attack.gd" id="6_poison_attack"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_hurt.gd" id="7_hurt"]
[ext_resource type="Script" path="res://characters/enemies/states/enemy_death.gd" id="8_death"]
[ext_resource type="Script" path="res://components/hitbox/hitbox.gd" id="9_hitbox"]
[ext_resource type="Script" path="res://components/hurtbox/hurtbox.gd" id="10_hurtbox"]
[ext_resource type="Script" path="res://components/health/health_component.gd" id="11_health"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_body"]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(8, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 5.0
height = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_sewer_rat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": "res://art/generated/enemies/sewer_rat_idle.png"
}],
"loop": true,
"name": &"idle"
}, {
"frames": [{
"duration": 1.0,
"texture": "res://art/generated/enemies/sewer_rat_pack.png"
}],
"loop": true,
"name": &"attack"
}, {
"frames": [{
"duration": 1.0,
"texture": "res://art/generated/enemies/sewer_rat_idle.png"
}],
"loop": true,
"name": &"walk"
}, {
"frames": [{
"duration": 1.0,
"texture": "res://art/generated/enemies/sewer_rat_idle.png"
}],
"loop": true,
"name": &"hurt"
}, {
"frames": [{
"duration": 1.0,
"texture": "res://art/generated/enemies/sewer_rat_idle.png"
}],
"loop": false,
"name": &"death"
}]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sewer_rat")
centered = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_body")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_state_machine")
initial_state_path = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_idle")
idle_duration = 0.8

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource("4_patrol")

[node name="RatSwarmChase" type="Node" parent="StateMachine"]
script = ExtResource("5_swarm_chase")

[node name="RatPoisonAttack" type="Node" parent="StateMachine"]
script = ExtResource("6_poison_attack")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("7_hurt")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("8_death")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16
monitoring = false
monitorable = false
script = ExtResource("9_hitbox")
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_hitbox")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64
script = ExtResource("10_hurtbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_hurtbox")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("11_health")
max_health = 15
